Issue #8: Add Call to retrieve swagger json as input for swagger ui
