# backend/spring-server/src/main/java/io/swagger/api/FilesApiController.java
@@ -1,7 +1,6 @@
 package io.swagger.api;
 
 import at.jku.se.pr.rest.qualityapi.mongodb.MongoDBRequest;
-import io.swagger.model.ApplicationError;
 import io.swagger.model.FileRequest;
 import io.swagger.model.FileResponse;
 
@@ -9,30 +8,21 @@ import io.swagger.annotations.*;
 
 import org.bson.Document;
 import org.joda.time.DateTime;
-import org.springframework.boot.json.BasicJsonParser;
-import org.springframework.boot.json.JsonParser;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.UUID;
 
-import javax.validation.constraints.*;
 import javax.validation.Valid;
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-12-07T18:40:11.066Z")
 
 @Controller
 public class FilesApiController implements FilesApi {
-
-
 
     public ResponseEntity<FileResponse> filesPost(@ApiParam(value = "The file to upload" ,required=true )  @Valid @RequestBody FileRequest file) {
         LinkedHashMap<String,Object> swagger = (LinkedHashMap<String,Object>) file.getSwagger();
@@ -81,6 +71,22 @@ public class FilesApiController implements FilesApi {
         );
 
         return new ResponseEntity<FileResponse>(response, HttpStatus.OK);
+    }
+
+    public ResponseEntity<Object> filesIdGet(@ApiParam(value = "",required=true ) @PathVariable("id") UUID id) {
+        MongoDBRequest collection = new MongoDBRequest("files");
+        List<Document> results = collection.find(new Document().append("file-id", id));
+        if (results.size() == 0) {
+            System.out.println(String.format("File ID %s not found".format(String.valueOf(id))));
+            return new ResponseEntity<Object>(HttpStatus.NOT_FOUND);
+        } else if(results.size() > 1){
+            System.out.println(String.format("Multiple Files for File ID %s found!".format(String.valueOf(id))));
+            return new ResponseEntity<Object>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+
+        Object response = results.get(0).get("swagger");
+
+        return new ResponseEntity<Object>(response, HttpStatus.OK);
     }
 
 }
